@@ -36,7 +36,8 @@ namespace Marvel {
 			{mvPythonDataType::FloatList, "uv_max", "normalized texture coordinates", "(1.0, 1.0)"},
 			{mvPythonDataType::IntList, "color", "", "(255, 255, 255, 255)"},
 			{mvPythonDataType::String, "tag", "", "''"},
-		}, ("Draws an image on a drawing. p_min and p_max represent the upper-left and lower-right corners of the rectangle."
+		}, ("Draws an image on a drawing. p_min (bottom-left) and p_max (upper-right) represent corners of the rectangle the image will be drawn to."
+			"Setting the p_min equal to the p_max will sraw the image to with 1:1 scale."
 			"uv_min and uv_max represent the normalized texture coordinates of the original image that will be shown. Using (0,0)->(1,1) texture"
 			"coordinates will generally display the entire texture."), "None", "Drawing") });
 
@@ -267,6 +268,7 @@ namespace Marvel {
 			ThrowPythonException(std::string(drawing) + " is not a drawing.");
 			return GetPyNone();
 		}
+
 		dwg->drawImage(file, mpmin, mpmax, muv_min, muv_max, mcolor, tag);
 
 		return GetPyNone();
